--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file contains the names of the main authors of this program
 
 Betel Addisu <beteladdisu09@gmail.com>
-Yos 
+Yoseph Zewdu <yoszed22@gmail.com>
